--- a/css/style.css
+++ b/css/style.css
@@ -144,3 +144,87 @@ body{
     background: var(--main-color);
     color: var(--white-color);
 }
+
+
+.book-page.page-right{
+    position: absolute;
+    right: 0;
+    transform-style: preserve-3d;
+    transform-origin: left;
+}
+.book-page.page-right.turn{
+    transform: rotateY(-180deg);
+}
+.book-page .page-front, 
+.book-page .page-back{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--pages-color);
+    padding: 1.5rem 2rem;
+}
+
+.book-page .page-front{
+    transform: rotateY(0deg) translateY(1px);
+}
+.book-page .page-back{
+    transform: rotateY(180deg) translateY(1px);
+}
+.title{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.work-education-box{
+    border-left: var(--border);
+}
+.work-education-box .work-education-content{
+    position: relative;
+    padding-left: 1.6rem;
+    margin-bottom: 1.2rem;
+}
+.work-education-box .work-education-content::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -.65rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    background: var(--main-color);
+    border-radius: 50%;
+}
+.work-education-content .year{
+    color: var(--main-color);
+}
+.work-education-content .year i{
+    margin-right: .4rem;
+}
+
+.page-number{
+    position: absolute;
+    bottom: 1.2rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.nextPrev-btn{
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    bottom: .9rem;
+    right: 1.5rem;
+    cursor: pointer;
+    font-size: 2rem;
+    color: var(--second-text-color);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+}
+.nextPrev-btn:hover{
+    color: var(--main-color);
+}
+
+.nextPrev-btn.back{
+    left: 1.5rem;
+}
